--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>-------------&gt; Your computer is infected!!! &lt;-------------</p>
           </div>
           <footer class="w3-container w3-teal">
-            <p>--------&gt; Virus! Virus! Virus! &lt;--------</p>
+            <p id="yloc">--------&gt; Virus! Virus! Virus! &lt;--------</p>
           </footer>
         </div>
       </div>
